--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
+    "react-data-table-component": "^6.11.6",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "recharts": "^1.8.5",
+    "styled-components": "^5.2.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
