--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.1",
     "react-data-table-component": "^6.11.6",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-scripts": "4.0.0",
+    "react-tooltip": "^4.2.11",
+    "reactjs-popup": "^2.0.4",
     "recharts": "^1.8.5",
     "styled-components": "^5.2.1",
     "universal-cookie": "^4.0.4",
