--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-data-table-component": "^6.11.6",
     "react-dom": "^17.0.1",
